Added basic tables to each page. Added nav.

--- a/templates/index.j2
+++ b/templates/index.j2
@@ -2,13 +2,16 @@
 {% block content %}
   <h3>This is the index page, with links and descriptions for the other pages<h3>
   <ul>
-  <li> <a href="/">The Homepage</a> </li>
   <li> <a href="/product_search">Product Search page: Includes a search bar to browse available products</a> </li>
   <li> <a href="/resupply_order">Resupply Orders: This is where the site owners order more product from suppliers</a> </li>
   <li> <a href="/supplier_search">Supplier Search: Similar to the product search, but searches for suppliers instead</a> </li>
-  <li> <a href="/view-cart">Cart: This allows a user to see which products they've added to their cart</a> </li>
+  <li> <a href="/customers">Customers</a> </li>
+  <li> <a href="/orders">Orders</a> </li>
+  <li> <a href="/order_products">Order Products</a> </li>
+  <li> <a href="/purchase_products">Purchase Products</a> </li>
+  {# <li> <a href="/view-cart">Cart: This allows a user to see which products they've added to their cart</a> </li>
   <li> <a href="/view_inventory">View Inventory: Where site admins can see inventory numbers</a> </li>
   <li> <a href="/view_product_admin">Product View - Admin: This allows an admin to see and change product data</a> </li>
-  <li> <a href="/view_product_customer">Product View - Customer: This allows a customer to view product info and add to cart</a> </li>
+  <li> <a href="/view_product_customer">Product View - Customer: This allows a customer to view product info and add to cart</a> </li> #}
   </ul>
 {% endblock %}
