--- a/templates/order_products.j2
+++ b/templates/order_products.j2
@@ -3,6 +3,14 @@
 <h2>Order Products</h2>
 <br>
 <br>
+<h4>Add Order Products:</h4>
+<form action="/order_products" method="POST">
+   Order ID: <input type="text" name="ord_prod_ord_id" required>
+   Product ID: <input type="text" name="ord_prod_prod_id" required>
+   Quantity: <input type="text" name="ord_prod_quan" required>
+   <input type="submit" value="Submit">
+  </form>
+<br>
 <table>
     <tr>
     {% for header in headers %}
