--- a/templates/products.j2
+++ b/templates/products.j2
@@ -3,6 +3,16 @@
 <h2>Products</h2>
 <br>
 <br>
+<h4>Add Product:</h4>
+<form action="/products" method="POST">
+   Name: <input type="text" name="pname" required>
+   Supplier ID: <input type="text" name="p_sid" required>
+   Unit Cost: <input type="text" name="p_cost" required><br>
+   Unit Price: <input type="text" name="p_price" required>
+   Quantity: <input type="text" name="p_quan" required>
+   <input type="submit" value="Submit">
+  </form>
+<br>
 <table>
     <tr>
     {% for header in headers %}
