--- a/templates/suppliers.j2
+++ b/templates/suppliers.j2
@@ -3,6 +3,14 @@
 <h2>Suppliers</h2>
 <br>
 <br>
+<h4>Add Supplier:</h4>
+<form action="/suppliers" method="POST">
+   Name: <input type="text" name="sname" required>
+   Location: <input type="text" name="sloc" required>
+   Phone number: <input type="text" name="sphone" required>
+   <input type="submit" value="Submit">
+  </form>
+<br>
 <table>
     <tr>
     {% for header in headers %}
