--- a/templates/products.j2
+++ b/templates/products.j2
@@ -3,26 +3,18 @@
 <h2>Products</h2>
 <br>
 <br>
-<h4>Add Product:</h4>
-<form action="/products" method="POST">
-   Name: <input type="text" name="pname" required>
-   Supplier ID: <input type="text" name="p_sid" required>
-   Unit Cost: <input type="text" name="p_cost" required><br>
-   Unit Price: <input type="text" name="p_price" required>
-   Quantity: <input type="text" name="p_quan" required>
-   <input type="submit" value="Submit">
-  </form>
+<h4><a href="/add_product"><button>Add Product</button></a></h4>
 <br>
 <table>
     <tr>
-    {% for header in headers %}
-    <th> {{ header }} </th>
+    {% for key in products[0].keys() %}
+    <th> {{ key }} </th>
     {% endfor %}
     </tr>
-    {% for row in rows %}
+    {% for product in products %}
         <tr>
-        {% for cell in row %}
-            <td> {{ cell }} </td>
+        {% for key in product.keys() %}
+            <td> {{ product[key] }} </td>
         {% endfor %}
         <td> <button type="button">Update</button> </td>
         <td> <button type="button">Delete</button> </td>
