--- a/templates/products.j2
+++ b/templates/products.j2
@@ -5,6 +5,8 @@
 <br>
 <h4><a href="/add_product"><button>Add Product</button></a></h4>
 <br>
+<div class="prod search"> <input type="text" placeholder="Search.."> </div>
+<br>
 <table>
     <tr>
     {% for key in products[0].keys() %}
