Product Delete now functions with backend. Added descriptions to homepage.

--- a/templates/main.j2
+++ b/templates/main.j2
@@ -1,7 +1,7 @@
 {% extends "layout.j2" %}
 {% block content %}
   <h3>Well Brewed: Craft Beer, anywhere</h3>
-  <p>All Tables have Add functionality</p>
+  <p>All Tables have Add functionality - Products and Customers work with backend</p>
   <p>Products Table has search bar for filtering results (needs backend)</p>
   <p>Products Table has Delete enabled with backend functionality</p>
   <p>Customers Table has Update enabled with backend functionality</p>
