--- a/templates/suppliers.j2
+++ b/templates/suppliers.j2
@@ -3,24 +3,18 @@
 <h2>Suppliers</h2>
 <br>
 <br>
-<h4>Add Supplier:</h4>
-<form action="/suppliers" method="POST">
-   Name: <input type="text" name="sname" required>
-   Location: <input type="text" name="sloc" required>
-   Phone number: <input type="text" name="sphone" required>
-   <input type="submit" value="Submit">
-  </form>
+<h4><a href="/add_supplier">Add Supplier</a></h4>
 <br>
 <table>
     <tr>
-    {% for header in headers %}
-    <th> {{ header }} </th>
+    {% for key in suppliers[0].keys() %}
+    <th> {{ key }} </th>
     {% endfor %}
     </tr>
-    {% for row in rows %}
+    {% for supplier in suppliers %}
         <tr>
-        {% for cell in row %}
-            <td> {{ cell }} </td>
+        {% for key in supplier.keys() %}
+            <td> {{ supplier[key] }} </td>
         {% endfor %}
         <td> <button type="button">Update</button> </td>
         <td> <button type="button">Delete</button> </td>
