--- a/templates/suppliers.j2
+++ b/templates/suppliers.j2
@@ -7,17 +7,16 @@
 <br>
 <table>
     <tr>
-    {% for key in suppliers[0].keys() %}
-    <th> {{ key }} </th>
-    {% endfor %}
+    <th>ID</th>
+    <th>Name</th>
+    <th>Phone</th>
+    <th>Location</th>
     </tr>
     {% for supplier in suppliers %}
         <tr>
         {% for key in supplier.keys() %}
             <td> {{ supplier[key] }} </td>
         {% endfor %}
-        <td> <button type="button">Update</button> </td>
-        <td> <button type="button">Delete</button> </td>
         </tr>
     {% endfor %}
 {% endblock %}
