--- a/templates/customers.j2
+++ b/templates/customers.j2
@@ -7,9 +7,9 @@
 <br>
 <table>
     <tr>
-    {% for key in customers[0].keys() %}
-    <th> {{ key }} </th>
-    {% endfor %}
+    <th>ID</th>
+    <th>Name</th>
+    <th>Phone</th>
     </tr>
     {% for customer in customers %}
         <tr>
@@ -18,7 +18,6 @@
         {% endfor %}
         <td> <form action ="/update_customer/{{ customer['Customer_id'] }}">
                 <input type="submit" value="Update"></form></td>
-        <td> <button type="button">Delete</button> </td>
         </tr>
     {% endfor %}
 {% endblock %}
