Fixed adding functionality for intersection tables. Removed superfluous files. Change add links to buttons

--- a/templates/customers.j2
+++ b/templates/customers.j2
@@ -3,7 +3,7 @@
 <h2>Customers</h2>
 <br>
 <br>
-<h4><a href="/add_customer">Add Customer</a></h4>
+<h4><a href="/add_customer"><button>Add Customer</button></a></h4>
 <br>
 <table>
     <tr>
