--- a/templates/orders.j2
+++ b/templates/orders.j2
@@ -3,7 +3,7 @@
 <h2>Orders</h2>
 <br>
 <br>
-<h4><a href="/add_order">Add Order</a></h4>
+<h4><a href="/add_order"><button>Add Order</button></a></h4>
 <br>
 <table>
     <tr>
