--- a/templates/purchases.j2
+++ b/templates/purchases.j2
@@ -3,7 +3,7 @@
 <h2>Purchases</h2>
 <br>
 <br>
-<h4><a href="add_purchase">Add Purchase</a></h4>
+<h4><a href="add_purchase"><button>Add Purchase</button></a></h4>
 <br>
 <table>
     <tr>
