--- a/templates/suppliers.j2
+++ b/templates/suppliers.j2
@@ -3,7 +3,7 @@
 <h2>Suppliers</h2>
 <br>
 <br>
-<h4><a href="/add_supplier">Add Supplier</a></h4>
+<h4><a href="/add_supplier"><button>Add Supplier</button></a></h4>
 <br>
 <table>
     <tr>
