--- a/templates/purchase_products.j2
+++ b/templates/purchase_products.j2
@@ -3,27 +3,20 @@
 <h2>Purchase Products</h2>
 <br>
 <br>
-<h4>Add Purchase Products:</h4>
-<form action="/purchase_products" method="POST">
-   Purchase ID: <input type="text" name="pur_prod_pur_id" required>
-   Product ID: <input type="text" name="pur_prod_prod_id" required>
-   Quantity: <input type="text" name="pur_prod_quan" required>
-   <input type="submit" value="Submit">
-  </form>
+<h4><a href="/add_purchase_product"><button>Add Purchase Products</button></a></h4>
 <br>
 <table>
     <tr>
-    {% for header in headers %}
-    <th> {{ header }} </th>
-    {% endfor %}
+    <th>Purchase Product ID</th>
+    <th>Purchase ID</th>
+    <th>Product ID</th>
+    <th>Quantity</th>
     </tr>
-    {% for row in rows %}
+    {% for purchase_product in purchase_products %}
         <tr>
-        {% for cell in row %}
-            <td> {{ cell }} </td>
+        {% for key in purchase_product.keys() %}
+            <td> {{ purchase_product[key] }} </td>
         {% endfor %}
-        <td> <button type="button">Update</button> </td>
-        <td> <button type="button">Delete</button> </td>
         </tr>
     {% endfor %}
 {% endblock %}
