--- a/templates/customers.j2
+++ b/templates/customers.j2
@@ -1,5 +1,6 @@
 {% extends "layout.j2" %}
 {% block content %}
+<div class="pageContent">
 <h2>Customers</h2>
 <br>
 <br>
@@ -20,4 +21,5 @@
                 <input type="submit" value="Update"></form></td>
         </tr>
     {% endfor %}
+</div>
 {% endblock %}
