--- a/templates/main.j2
+++ b/templates/main.j2
@@ -1,9 +1,10 @@
 {% extends "layout.j2" %}
 {% block content %}
+  <div class="pageContent">
   <h3>Well Brewed: Craft Beer, anywhere</h3>
   <p>All Tables have Insert functionality</p>
   <p>Products Table has search bar for filtering results (needs backend)</p>
   <p>Products Table has Delete enabled with backend functionality</p>
   <p>Customers Table has Update enabled with backend functionality</p>
-
+  </div>
 {% endblock %}
