--- a/templates/products.j2
+++ b/templates/products.j2
@@ -1,5 +1,6 @@
 {% extends "layout.j2" %}
 {% block content %}
+<div class="pageContent">
 <h2>Products</h2>
 <br>
 <br>
@@ -28,4 +29,5 @@
                 <input type="submit" value="Delete"></form></td>
         </tr>
     {% endfor %}
+</div>
 {% endblock %}
