--- a/templates/purchases.j2
+++ b/templates/purchases.j2
@@ -1,5 +1,6 @@
 {% extends "layout.j2" %}
 {% block content %}
+<div class="pageContent">
 <h2>Purchases</h2>
 <br>
 <br>
@@ -18,4 +19,5 @@
         {% endfor %}
         </tr>
     {% endfor %}
+</div>
 {% endblock %}
