--- a/templates/layout.j2
+++ b/templates/layout.j2
@@ -3,10 +3,28 @@
   <head>
     <title>Well Brewed: Craft Beer, Anywhere</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">    <style type="text/css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">    
+    <style type="text/css">
       .container {
         padding-top: 100px;
       }
+	table, th, td {
+	border: 1px solid black;
+	width: 80%;
+	border-collapse: collapse;	
+	text-align: center;
+	table-layout: fixed;	
+	}
+	body{
+        background-image: url('https://image.shutterstock.com/image-photo/beer-tap-600w-263923439.jpg');
+        background-size: cover;
+        }
+	.pageContent{
+		width: 80%;
+		background-color: white;
+		margin: auto;
+		padding: 10px;
+	}
     </style>
   </head>
   <body>
