--- a/templates/order_products.j2
+++ b/templates/order_products.j2
@@ -1,5 +1,6 @@
 {% extends "layout.j2" %}
 {% block content %}
+<div class="pageContent">
 <h2>Order Products</h2>
 <br>
 <br>
@@ -19,4 +20,5 @@
         {% endfor %}
         </tr>
     {% endfor %}
+</div>
 {% endblock %}
