--- a/templates/add_order.j2
+++ b/templates/add_order.j2
@@ -2,8 +2,13 @@
 {% block content %}
 <h4>Add Order:</h4>
 <form action="/add_order" method="POST">
-   Customer ID: <input type="text" name="ord_cid" required>
-   Date: <input type="text" name="ord_date" required>
+   Customer: <select name="ord_cid">
+	<!-- display all suppliers inside this dropdown -->
+        {% for customer in customer_names %}
+          <option value="{{ customer[0] }}">{{ customer[1] }}</option>
+        {% endfor %}  
+        </select><br> 
+   Date: <input type="text" name="ord_date" placeholder="YYYY-MM-DD" required>
    <input type="submit" value="Submit">
   </form>
 <br>
