--- a/templates/add_purchase_product.j2
+++ b/templates/add_purchase_product.j2
@@ -2,8 +2,17 @@
 {% block content %}
 <h4>Add Purchase Product:</h4>
 <form action="/add_purchase_product" method="POST">
-   Purchase ID: <input type="text" name="pur_id" required>
-   Product ID: <input type="text" name="prod_id" required>
+   Purchase ID: <select name="pur_id">
+        {% for purchase_id in purchase_ids %}
+          <option value="{{ purchase_id }}">{{ purchase_id }}</option>
+          {% endfor %}
+          </select><br>
+   Product: <select name="prod_id">
+	<!-- display all Products inside this dropdown -->
+        {% for product in product_names %}
+          <option value="{{ product[0] }}">{{ product[1] }}</option>
+        {% endfor %}  
+        </select><br> 
    Quantity: <input type="text" name="quan" required>
    <input type="submit" value="Submit">
   </form>
