Small fixes to sql files. Took out nullable customer name.

--- a/templates/main.j2
+++ b/templates/main.j2
@@ -5,7 +5,7 @@
   <p>All Tables have Insert functionality</p>
   <p>Products Table has search bar for filtering results (needs backend)</p>
   <p>Products Table has Delete enabled with backend functionality. Deleting a Product which is referenced in the Order Products table will delete that order product as well.</p>
-  <p>Customers Table has Update enabled with backend functionality. Users can insert NULL values for Phone/Location when updating a customer</p>
+  <p>Customers Table has Update enabled with backend functionality. Users can insert NULL values for Phone when updating a customer</p>
   <br>
   <p>All tables/add pages use Foreign Key names rather than IDs for ease of use, and add pages provjde drop-down menus to select these FKs from.
   </div>
